--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   go_router: ^13.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
