--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.2.1
   go_router: ^13.0.0
   provider: ^6.1.4
+  syncfusion_flutter_charts: ^28.2.9
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logosinfondo.png
-    - assets/logo.png
-    - assets/negro.png
+    - assets/ojonegrocut.PNG
+    - assets/ojoblancocut.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
